src/test/deca/syntax/invalid/created/test_invalid_method.deca
class A {
    // Erreur : il manque les accolades {} ou 'asm'
    void m(); 
}